# ICSProfile

./: .gitignore  README.md  match.py  modbus_umas_data.txt  pyproject.toml  requirements.txt  run.sh  train.py  umas.py
Data/Packets/: Capture Traffic with XIO.pcapng.json  CaptureTrafficWithTimer.pcapng.json  Complicated parallel connection.pcapng.json  Memory bits S&P.pcapng.json  New project.pcapng.json  P&N.pcapng.json  Proj2.pcapng.json  Raising_falling_edges.pcapng.json  Traffic timer changed.pcapng.json  WriteVar.pcapng.json  XIC-SIO parallel.pcapng.json  XIC-XIO parallel neg-coil.pcapng.json  counter and timer.pcapng.json  drum-test.pcapng.json  equations.pcapng.json  m4 to m-8multiple.pcapng.json  m4 to m-multiple.pcapng.json  m4 to m-multiple2 - Copy.pcapng.json  m4-m10.pcapng.json  m4-m9 - Copy.pcapng.json  m5.pcapng.json  memory floats gt.pcapng.json  memorywords.pcapng.json  multiple timers.pcapng.json  outputs as inputs1.pcapng.json  test.pcapng.json  test2.pcapng.json  test4.pcapng.json  testPLC.pcapng.json
Data/Predict/: Capture Traffic with XIO.pcapng.csv  CaptureTrafficWithTimer.pcapng.csv  Complicated parallel connection.pcapng.csv  Memory bits S&P.pcapng.csv  New project.pcapng.csv  P&N.pcapng.csv  Proj2.pcapng.csv  Raising_falling_edges.pcapng.csv  Traffic timer changed.pcapng.csv  WriteVar.pcapng.csv  XIC-SIO parallel.pcapng.csv  XIC-XIO parallel neg-coil.pcapng.csv  counter and timer.pcapng.csv  drum-test.pcapng.csv  equations.pcapng.csv  m4 to m-8multiple.pcapng.csv  (+13 more)
src/: generate.py  model.py  parse.py  pree.py  preprocessor.py  util.py
(+84 files in other folders)
