[project]
name = "icsprofile"
version = "0.1.0"
description = ""
authors = [
    {name = "Masrik Dahir"}
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
